# rusting

./: Cargo.toml
notes/: notes.txt
src/: box_example.rs  emirs_space.rs  experiments0.rs  factory_experiment.rs  grids.rs  main.rs
