[package]
name = "untitled2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
time = "0.3.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.73"
bincode = "1.3.3"
memstream = "0.0.1"
byteorder = "1.4.3"
flatbuffers = "22.9.29"
tokio = { version = "1", features = ["full"] }


